--- a/index.css
+++ b/index.css
@@ -23,6 +23,7 @@ body {
 #input-field {
     padding: 10px;
     text-align: center;
+    max-width: 250px;
     margin-top: 40px;
     border: 0;
     border-radius: 8px;
@@ -30,6 +31,7 @@ body {
     font-size: larger;
     background-color: #dae0ec;
     color: #432000;
+    width: 69%;
 }
 
 #add-button {
@@ -115,13 +117,14 @@ ul li:hover {
 }
 
 .input-text-mic{
-    width:100%;
+   
     display:flex;
     align-items:center;
-    column-gap: 40px;
+    column-gap: 33px;
+    max-width: 320px;
     
 }
 .input-text-mic p{
-    margin:-30px 0 0 -125px;
+    margin:-25px 0 0 -125px;
 
 }
